<resources>
    <string name="app_name">UrbanWash</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_terms_agree">By joining us you agree to the </string>
    <string name="login_terms_tnc">terms and conditions</string>
    <string name="register_title">CREATE AN ACCOUNT</string>
    <string name="greeting_morning">Good Morning</string>
    <string name="greeting_afternoon">Good Afternoon</string>
    <string name="greeting_evening">Good Evening</string>
    <string name="start_tap_title">Tap to Start</string>
    <string name="start_confirm">Confirm</string>
    <string name="new_order">New Order</string>
    <string name="schedule_where">Where ?</string>
    <string name="schedule_add_address">Add new location</string>
    <string name="schedule_select_other_address">Select location</string>
    <string name="schedule_when">When ?</string>
    <string name="schedule_info">Note? e.g. will be handed over by maid</string>
    <string name="confirm_pick_up">Pick Up</string>
    <string name="confirm_return">Return</string>
    <string name="confirm_locations">Locations</string>
    <string name="confirm_services">Services</string>
    <string name="kg_service_info">No worries, let us help you. Our agent will re-calculate it for you once they come to pick up the laundry.</string>
    <string name="note">Note</string>
    <string name="change">Change</string>
    <string name="new_address">New Address</string>
    <string name="new_promo">New Promo</string>
    <string name="new_message">New Message</string>
    <string name="new_customer">New Customer</string>
    <string name="critical">Critical</string>
    <string name="warning">Warning</string>
    <string name="wallet_history">Wallet History</string>
    <string name="name_hint">Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="email_hint">e.g. someone@gmail.com</string>
    <string name="mobile_hint">e.g. 081211154321</string>
    <string name="password_hint">Secret Phrase</string>
    <string name="password_retype_label">Re-type Password</string>
    <string name="password_retype_hint">Re-type Secret phrase</string>
    <string name="old_password_label">Old Password</string>
    <string name="old_password_hint">Old Secret Phrase</string>
    <string name="new_password_label">New Password</string>
    <string name="new_password_hint">New Secret Phrase</string>
    <string name="new_password_retype_label">Re-type New Password</string>
    <string name="new_password_retype_hint">Re-type New Secret Phrase</string>
    <string name="char_hidden">X</string>
    <string name="name_label">Name</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="email_label">Email</string>
    <string name="mobile_label">Mobile</string>
    <string name="password_label">Password</string>
    <string name="place_detail">Tower / Floor / Unit No.</string>
    <string name="status">Status</string>
    <string name="transporter">Transporter</string>
    <string name="delivery">Return:</string>
    <string name="info_promo">Enjoy various limited promotion from UrbanWash</string>
    <string name="info_reschedule">* Return date/time can still be modified in My Order after it has been submitted</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="admin_pending_top_up">Process Top Up</string>
    <string name="admin_promo">Promo</string>
    <string name="admin_message">Message</string>
    <string name="admin_customer">Customer</string>
    <string name="report_daily">Daily Report</string>
    <string name="report_monthly">Monthly Report</string>
    <string name="report_yearly">Yearly Report</string>
    <string name="report_daily_collection">Order Collection</string>
    <string name="report_daily_delivery">Order Delivery</string>
    <string name="report_order_place">Customer Location</string>
    <string name="report_prospective_place">Prospective Location</string>
    <string name="empty_order">Empty Order</string>
    <string name="service_not_available">Not Available</string>
    <string name="service_min_4_days">Min. 4 Days</string>
    <string name="transporter_will_be_assigned">To be assigned soon</string>
    <string name="assign_transporter_collection">Assign transporter for collection</string>
    <string name="assign_transporter_delivery">Assign transporter for return</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_wallet">Wallet</string>
    <string name="grand_total_line_1">GRAND</string>
    <string name="grand_total_line_2">TOTAL</string>
    <string name="total">TOTAL</string>
    <string name="button_ok">OK</string>
    <string name="button_next">Next</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_apply">Apply</string>
    <string name="button_submit">Submit</string>
    <string name="button_call">Call</string>
    <string name="button_sms">SMS</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_info">Info</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="verification_code_request">Enter Verification Code</string>
    <string name="verification_code_complete">Mobile Number Verified</string>
    <string name="hint_promo_code">input promo code</string>
    <string name="order_promo">Promo:</string>
    <string name="order_promo_min_order">Minimal Order %1$s</string>
    <string name="promo_enter_code">Enter promo code</string>
    <string name="promo_code">Code</string>
    <string name="promo_code_hint">ABCDE</string>
    <string name="promo_description">Description</string>
    <string name="promo_description_hint">Promo ABCDE</string>
    <string name="promo_value">Value</string>
    <string name="promo_value_hint">E.g. 10.000</string>
    <string name="promo_min_order">Min. Order</string>
    <string name="promo_min_order_hint">E.g. 50.000</string>
    <string name="promo_period">Period</string>
    <string name="promo_start_date_hint">From</string>
    <string name="promo_end_date_hint">To</string>
    <string name="map_info_order_place">Total Order: %1$s \n%2$s</string>
    <string name="map_info_prospective_place">Total Customer: %1$s \n%2$s</string>
    <string name="message_content">Message</string>
    <string name="message_content_hint">e.g. Watch out for our kick ass promo!</string>
    <string name="select_delivery_date">Select Return Schedule</string>
    <string name="available_times">Available Times</string>
    <string name="available_agents">Available Agents</string>
    <string name="my_order_in_progress">In Progress</string>
    <string name="my_order_completed">Completed</string>
    <string name="speed_type">Service Type</string>
    <string name="order_speed_type_regular">Regular (4 Days)</string>
    <string name="order_speed_type_express">Express (2 Days)</string>
    <string name="order_speed_type_deluxe">Deluxe (1 Day)</string>
    <string name="speed_type_regular">Regular</string>
    <string name="speed_type_express">Express</string>
    <string name="speed_type_deluxe">Deluxe</string>
    <string name="speed_type_4days">4 days</string>
    <string name="speed_type_2days">2 days</string>
    <string name="speed_type_1day">1 day</string>
    <string name="unit_kg">Kg</string>
    <string name="unit_pc">Pc</string>
    <string name="promo_type_amount">Amount</string>
    <string name="promo_type_percentage">Percentage</string>
    <string name="service_select">Laundry Types</string>
    <string name="service_kg">Basic (Per Kg)\nWash + Iron</string>
    <string name="service_piece">Premium (Per Piece)\nWash + Iron</string>
    <string name="service_dry_clean">Dry Clean</string>
    <string name="service_name_kg">Basic Laundry (Per Kg)</string>
    <string name="service_name_piece">Premium Laundry (Per Piece)</string>
    <string name="service_name_dry_clean">Dry Clean</string>
    <string name="service_desc_kg">We\'ll pick up your items and deliver them to you\n (freshly washed, ironed, and folded).</string>
    <string name="service_desc_piece">For your best clothes/items that need extra care,\n we\'ll handle it with the most premium treatment.</string>
    <string name="service_desc_dry_clean">For your best clothes/items that need extra care,\n we\'ll handle it with the best dry clean treatment.</string>
    <string name="place_type_home">Home</string>
    <string name="place_type_apartment">Apartment</string>
    <string name="place_type_office">Office</string>
    <string name="product_type_kilogram">Basic</string>
    <string name="product_type_piece">Premium</string>
    <string name="product_type_dryclean">Dry Clean</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="double_zero">00</string>
    <string name="separator"> - </string>
    <string name="title_register">REGISTER</string>
    <string name="title_pick_up">LAUNDRY COLLECTION</string>
    <string name="title_select_product">SELECT SERVICE</string>
    <string name="title_order_product">ORDER SERVICE</string>
    <string name="title_order_confirmation">ORDER CONFIRMATION</string>
    <string name="title_order_status">ORDER STATUS</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="title_select_pic">SELECT TRANSPORTER</string>
    <string name="title_new_address">NEW ADDRESS</string>
    <string name="title_new_customer">NEW CUSTOMER</string>
    <string name="title_promo">PROMO</string>
    <string name="title_wallet">WALLET</string>
    <string name="title_top_up">TOP UP CREDIT</string>
    <string name="title_tracking_order">TRACKING ORDER</string>
    <string name="title_update_order">UPDATE ORDER</string>
    <string name="title_update_profile">UPDATE PROFILE</string>
    <string name="title_wallet_history">WALLET HISTORY</string>
    <string name="title_process_top_up">PROCESS TOP UP</string>
    <string name="title_manage_promo">MANAGE PROMO</string>
    <string name="title_manage_promo_new">NEW PROMO</string>
    <string name="title_manage_promo_update">UPDATE PROMO</string>
    <string name="title_manage_message">MESSAGES</string>
    <string name="title_manage_message_new">NEW MESSAGE</string>
    <string name="title_report_daily">DAILY REPORT</string>
    <string name="title_report_monthly">MONTHLY REPORT</string>
    <string name="title_report_yearly">YEARLY REPORT</string>
    <string name="title_order_place">ORDER LOCATION</string>
    <string name="title_prospective_place">PROSPECTIVE LOCATION</string>
    <string name="title_reset_password">RESET PASSWORD</string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="title_order_collection">ORDER COLLECTION</string>
    <string name="title_order_delivery">ORDER DELIVERY</string>
    <string name="title_register_step_1">CREATE ACCOUNT</string>
    <string name="title_register_step_2">CREATE ACCOUNT</string>
    <string name="title_register_step_3">YOUR ADDRESS</string>
    <string name="title_my_location">MY LOCATION</string>
    <string name="title_search_order">SEARCH ORDER</string>
    <string name="title_search_customer">SEARCH CUSTOMER</string>
    <string name="title_customer">CUSTOMER</string>
    <string name="title_order_new_order">NEW ORDER</string>
    <string name="message_order_minimum">Minimum charge to place an order Rp 20.0000</string>
</resources>