<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/panel_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="@drawable/custom_green_background">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/button_save"
            fontPath="fonts/HelveticaLTStd-Light.otf"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/button_save"
            android:textColor="@drawable/text_white_selector"
            android:textSize="18sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/panel_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/panel_promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/HelveticaLTStd-Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_code"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/text_code"
                    fontPath="fonts/HelveticaLTStd-Light.otf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorWhite"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/promo_code_hint"
                    android:inputType="textCapCharacters"
                    android:textAlignment="center"
                    android:textColor="@color/colorDarkGrey"
                    android:textColorHint="@color/colorLightGrey"
                    android:textSize="20sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLineGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/HelveticaLTStd-Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_description"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/text_description"
                    fontPath="fonts/HelveticaLTStd-Light.otf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorWhite"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/promo_description_hint"
                    android:textAlignment="center"
                    android:textColor="@color/colorDarkGrey"
                    android:textColorHint="@color/colorLightGrey"
                    android:textSize="20sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLineGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/HelveticaLTStd-Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_description"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="15sp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/radio_button_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/promo_type_amount"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="20sp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_button_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/promo_type_percentage"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="20sp"/>
                </RadioGroup>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLineGrey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/panel_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        fontPath="fonts/HelveticaLTStd-Bold.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/promo_value"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/text_value"
                        fontPath="fonts/HelveticaLTStd-Light.otf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/promo_value_hint"
                        android:inputType="numberSigned"
                        android:textAlignment="center"
                        android:textColor="@color/colorDarkGrey"
                        android:textColorHint="@color/colorLightGrey"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorLineGrey" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/panel_min_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        fontPath="fonts/HelveticaLTStd-Bold.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/promo_min_order"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/text_min_order"
                        fontPath="fonts/HelveticaLTStd-Light.otf"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/promo_min_order_hint"
                        android:inputType="numberSigned"
                        android:textAlignment="center"
                        android:textColor="@color/colorDarkGrey"
                        android:textColorHint="@color/colorLightGrey"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorLineGrey" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/HelveticaLTStd-Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_period"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/text_start_date"
                        fontPath="fonts/HelveticaLTStd-Light.otf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/promo_start_date_hint"
                        android:inputType="none"
                        android:focusable="false"
                        android:textAlignment="center"
                        android:textColor="@color/colorDarkGrey"
                        android:textColorHint="@color/colorLightGrey"
                        android:textSize="20sp"/>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/text_end_date"
                        fontPath="fonts/HelveticaLTStd-Light.otf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorWhite"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:hint="@string/promo_end_date_hint"
                        android:focusable="false"
                        android:inputType="none"
                        android:textAlignment="center"
                        android:textColor="@color/colorDarkGrey"
                        android:textColorHint="@color/colorLightGrey"
                        android:textSize="20sp" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLineGrey" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/HelveticaLTStd-Bold.otf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="15sp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/radio_button_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_active"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="20sp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_button_inactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/status_inactive"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="20sp"/>
                </RadioGroup>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLineGrey" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
