<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/button_regular"
            fontPath="fonts/HelveticaLTStd-Light.otf"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/speed_type_4days"
            android:textColor="@color/colorCustomGreen"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/button_express"
            fontPath="fonts/HelveticaLTStd-Light.otf"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/speed_type_2days"
            android:textColor="@color/colorCustomGreen"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/button_deluxe"
            fontPath="fonts/HelveticaLTStd-Light.otf"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/speed_type_1day"
            android:textColor="@color/colorCustomGreen"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@drawable/custom_green_background"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_info_tab_content_pricing"
            fontPath="fonts/HelveticaLTStd-Light.otf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/message_order_minimum"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_close_tab_content_pricing"
            android:layout_width="wrap_content"
            android:layout_height="22.5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_info_white" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_pricing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.25"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>